package ru.ifmo.se.lab2.modules;

public interface MathModule {
    double calculate(double x);
}
