@startuml
title Main Class Diagram

left to right direction
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 50
hide empty members

rectangle "lab2" {
  package "Core" {
    interface MathModule {
      + calculate(x: double): double
    }

    abstract class AbstractMathModule {
      - epsilon: double
      # safeDivide(a: double, b: double): double
    }
  }

  package "Trig Modules" {
    class CosModule
    class SinModule
    class SecModule
    class CscModule
    class CotModule
  }

  package "Log Modules" {
    class LnModule
    class LogModule {
      - base: double
      - lnBase: double
    }
  }

  package "System" {
    class FunctionSystemModule
  }

  package "CLI / IO" {
    class CsvExporter
    class Main
  }
}

AbstractMathModule ..|> MathModule

CosModule --|> AbstractMathModule
SinModule --|> AbstractMathModule
SecModule --|> AbstractMathModule
CscModule --|> AbstractMathModule
CotModule --|> AbstractMathModule
LnModule --|> AbstractMathModule
LogModule --|> AbstractMathModule
FunctionSystemModule --|> AbstractMathModule

SinModule --> CosModule
SecModule --> CosModule
CscModule --> SinModule
CotModule --> CosModule
CotModule --> SinModule

LogModule --> LnModule

FunctionSystemModule --> CosModule
FunctionSystemModule --> SinModule
FunctionSystemModule --> SecModule
FunctionSystemModule --> CscModule
FunctionSystemModule --> CotModule
FunctionSystemModule --> LnModule
FunctionSystemModule --> LogModule

CsvExporter --> MathModule : export

Main --> CsvExporter
Main --> CosModule
Main --> LnModule
Main --> LogModule
Main --> FunctionSystemModule

@enduml
